--- a/public_html/index.html
+++ b/public_html/index.html
@@ -73,8 +73,8 @@
 		<div class="container">
 			<div class="row rowsafari">
 				<div class="col-lg-6 res-desk-mar-bot">
-					<h3 class="section-margin-bottom"><a href="#">Название<br> Позволит вам: </a></h3>
-					<p>Elit ut aliquam purus sit amet. Nunc sed augue lacus viverra vitae congue. Pharetra convallis posuere morbi leo urna. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet.
+					<h3 class="section-margin-bottom"><a href="#">Название</a></h3>
+					<p>“Название” - сервис для всех поклонников гольфа: от новичков до профессионалов. Здесь Вы сможете найти площадку для игры, научиться новым приемам, потренироваться, узнать последние новости из мира гольфа, а также познакомиться с единомышленниками.
 						<p>
 							<div class="btn-wrapper">	<a href="#" class="boxed-btn-1">Подробнее...</a>
 							</div>
@@ -138,8 +138,7 @@
 						<div class="game-img-1">
 							<img src="images/600x700x1.jpg" alt="600x700x1" class="img-fluid">
 							<div class="game-col-content-1">
-								<h6 class="text-white">текст</h6>
-								<h5 class="content-top-space1"><a href="#">текст</a></h5>
+								<h6 class="text-white">Изучите технику свинга с нашим цифровым персональным тренером на основе искусственного интеллекта </h6>
 							</div>
 						</div>
 					</div>
@@ -149,8 +148,7 @@
 						<div class="game-img-1">
 							<img src="images/600x700x2.jpg" alt="600x700x2" class="img-fluid">
 							<div class="game-col-content-1">
-								<h6 class="text-white">текст</h6>
-								<h5 class="content-top-space1"><a href="#">текст</a></h5>
+								<h6 class="text-white">Оттачивайте мастерство в режиме “Тренировка” в мобильном приложении</h6>
 							</div>
 						</div>
 					</div>
@@ -160,8 +158,7 @@
 						<div class="game-img-1">
 							<img src="images/600x700x3.jpg" alt="600x700x3" class="img-fluid">
 							<div class="game-col-content-1">
-								<h6 class="text-white">текст</h6>
-								<h5 class="content-top-space1"><a href="#">текст</a></h5>
+								<h6 class="text-white">Следите за последними новостями из мира гольфа</h6>
 							</div>
 						</div>
 					</div>
@@ -171,8 +168,7 @@
 						<div class="game-img-1">
 							<img src="images/600x700x4.jpg" alt="600x700x4" class="img-fluid">
 							<div class="game-col-content-1">
-								<h6 class="text-white">текст</h6>
-								<h5 class="content-top-space1"><a href="#">текст</a></h5>
+								<h6 class="text-white">Общайтесь, делитесь впечатлениями и находите партнеров для игры в гольф на нашем форуме</h6>
 							</div>
 						</div>
 					</div>
